--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "fix": "yarn lint && yarn check-types",
+    "fix": "yarn lint && yarn check-types && yarn format:fix",
     "lint": "next lint --fix",
-    "check-types": "yarn run -T tsc -b"
+    "check-types": "yarn run tsc -b",
+    "format:check": "yarn run prettier --check \"**/*.{js,jsx,ts,tsx,md,mdx,yaml,yml}\"",
+    "format:fix": "yarn run prettier --loglevel warn --write \"**/*.{js,jsx,ts,tsx,md,mdx,yaml,yml}\""
   },
   "dependencies": {
     "next": "12.1.6",
     "next-seo": "^5.4.0",
-    "prettier": "^2.6.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "typescript": "^4.6.4"
@@ -25,6 +26,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "prettier": "^2.6.2"
   }
 }
